Bug 253294 - [macOS] Show correction panel for grammar errors
Summary: [macOS] Show correction panel for grammar errors
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: HTML Editing (show other bugs)
Version: Other
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Aditya Keerthi
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-03-02 22:26 PST by Aditya Keerthi
Modified: 2023-03-03 09:54 PST (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aditya Keerthi 2023-03-02 22:26:06 PST
Native text views display a correction panel when grammar checking is enabled and a grammar error is selected, similar to spelling error.

WebKit should match AppKit's behavior.
Comment 1 Aditya Keerthi 2023-03-02 22:26:15 PST
rdar://105738781
Comment 2 Aditya Keerthi 2023-03-02 22:41:29 PST
Pull request: https://github.com/WebKit/WebKit/pull/10986
Comment 3 EWS 2023-03-03 09:54:03 PST
Committed 261151@main (81727684efeb): <https://commits.webkit.org/261151@main>

Reviewed commits have been landed. Closing PR #10986 and removing active labels.